--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,16 +1,14 @@
-// Variables
-@import 'variables';
+@import 'themes/light';
+@import 'themes/dark';
 
-/* ./your-css-folder/styles.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'components/button';
+@import 'components/card';
 
-.button {
-    @apply bg-blue text-white no-underline rounded-lg text-sm py-2 px-5;
-    box-shadow: 0 2px 7px 0 #b0eaff;
+body,
+button {
+    @apply text-default;
 }
 
-.card {
-    @apply bg-white p-5 rounded-lg shadow;
+.section {
+    @apply px-8;
 }
