--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,11 @@
+// Variables
+@import 'variables';
+
+/* ./your-css-folder/styles.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import 'themes/light';
 @import 'themes/dark';
 
